# treeview_django

./: README.md  manage.py  pyproject.toml
treeview/: admin.py  apps.py  models.py  serializer.py  urls.py
treeview/migrations/: 0001_initial.py
treeview_django/: asgi.py  settings.py  urls.py  wsgi.py
